--- a/css/style.scss
+++ b/css/style.scss
@@ -24,6 +24,7 @@ body{
         height: 100%;
         background: var(--text-color);
         display: flex;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
 
@@ -40,11 +41,7 @@ body{
             padding: 0vh;
             gap:0vh;
             background: var(--s1-color);
-            box-shadow: 1vh 1vh 1vh var(--s1-color);
             overflow: hidden;
-            &:hover{
-                box-shadow: 1vh 1vh 1vh var(--s2-color);
-            }
 
             //Start of display part
             .display-part{
@@ -67,7 +64,7 @@ body{
                     align-items: flex-end;
                     justify-content: flex-end;
                     padding: 0 2vh;
-                    font-size: 2vh;
+                    font-size: 3vh;
                     font-family: var(--text);
                     color:var(--text-color);
                     opacity: 50%;
@@ -95,22 +92,23 @@ body{
             //Start of button part
             .button-part{
                 width: 100%;
-                height: 60%;
                 background: var(--p2-color);
                 display: flex;
                 flex-wrap: wrap;
                 justify-content: center;
                 align-items: center;
+                padding: 1vh;
+                gap:1vh;
                 //Start of buttons
                 .buttons{
                     cursor: pointer;
                     transition: .2 ease-in-out;
-                    width: 25%;
+                    width: 22%;
                     padding: 2vh;
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    font-size: 2vh;
+                    font-size: 3vh;
                     font-weight: bold;
                     font-family: var(--text);
                     border:.1vh solid var(--p1-color);
@@ -121,15 +119,9 @@ body{
                     }
                 }
                 //End of buttons
-                //Start of %
-                :nth-child(2)
-                {
-                    font-size: 2vh;
-                }
-                //ENd of %
                 //Start of AC
                 :nth-child(3){
-                    width:50%;
+                    width:47%;
                     background: var(--s2-color);
                     &:hover{
                         color:var(--s2-color);
