--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 :root {
-  --p2-color: #403F3C;
+  --p2-color: #403f3c;
   --p1-color: #1d1d1d;
-  --s1-color: #D9D8D7;
+  --s1-color: #d9d8d7;
   --s2-color: #1d1d1d;
-  --text-color:#F2F2EB;
-  --text:sans-serif;
+  --text-color: #f2f2eb;
+  --text: sans-serif;
   --shadow: black;
 }
 
@@ -17,16 +17,25 @@
 body {
   width: 100%;
   height: 100vh;
+  margin: 0;
+  background: linear-gradient(to top, #3e3e3e, #c2c2c2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
 }
-body .everything {
-  width: 100%;
-  height: 100%;
-  background: var(--text-color);
+
+.everything {
+  width: 40vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  background: var(--s1-color);
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
+
 body .everything .calculator-whole {
   transition: 0.2s ease-in-out;
   width: 40vh;
@@ -104,6 +113,7 @@ body .everything .calculator-whole .button-part .buttons {
   border: 0.1vh solid var(--p1-color);
   color: var(--text-color);
   background: var(--p2-color);
+  transition: all 0.2s ease-in-out;
 }
 body .everything .calculator-whole .button-part .buttons:hover {
   background: var(--p1-color);
@@ -122,4 +132,4 @@ body .everything .calculator-whole .button-part :nth-last-child(1) {
 body .everything .calculator-whole .button-part :nth-last-child(1):hover {
   color: var(--s2-color);
   background: var(--text-color);
-}/*# sourceMappingURL=style.css.map */
+} /*# sourceMappingURL=style.css.map */
